--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
 
 <body>
     <div class="cover">
-        <img src="img/mbid-36109424-3d89-4ba5-bce4-575c01a05828-10704921669.jpg">
+        <img class="cover-img" src="img/mbid-36109424-3d89-4ba5-bce4-575c01a05828-10704921669.jpg">
     </div>
+    <script src="js/index.js"></script>
 </body>
 </html>
