First version that works again :) No CSS though.

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -1,13 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <link rel="stylesheet" href="/static/css/compiled.css" />
+    <title>Poshett</title>
 </head>
-
 <body>
     <div class="cover">
         <img class="cover-img" src="">
     </div>
-    <script src="/static/js/index.js"></script>
 </body>
 </html>
