Vue starts to work

--- a/src/web/index.html
+++ b/src/web/index.html
@@ -4,8 +4,6 @@
     <title>Poshett</title>
 </head>
 <body>
-    <div class="cover">
-        <img class="cover-img" src="">
-    </div>
+<div id="app"></div>
 </body>
 </html>
