--- a/src/web/index.html
+++ b/src/web/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Poshett</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
 <div id="app"></div>
